// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserInfo /> should render a user picture 1`] = `
.c2 {
  border-radius: 50%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 3.1rem;
  height: 3.1rem;
  border-radius: 50%;
  background: hsl(145,63%,49%);
  color: white;
}

.c5 {
  display: inline-block;
  border-image-source: none;
  border-image-width: 0;
  padding: 0;
  font-size: 20;
  line-height: 20;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-family: "Open Sans",Helvetica,Arial,sans-serif;
  font-weight: 200;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  text-align: left;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  display: grid;
  grid-template-columns: 4.1rem auto auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.5rem;
  background: rgba(0,0,0,0.2);
  border-top: 1px solid hsl(213,17%,20%);
  border-bottom: 1px solid hsl(213,17%,20%);
  color: hsl(0,100%,100%);
  font-size: 1.4rem;
  cursor: pointer;
}

@media (min-width:36em) and (max-width:61.9375em) {
  .c3 {
    display: none;
  }
}

@media (min-width:0em) and (max-width:35.9375em) {
  .c0 {
    display: none;
  }
}

@media (min-width:36em) and (max-width:61.9375em) {
  .c0 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    grid-template-columns: auto;
    grid-template-rows: 4.1rem 5rem;
  }
}

<Styled(UserInfo)
  name="Tony Starck"
  pictureSrc="http://pictureSrc.com"
>
  <UserInfo
    className="c0"
    name="Tony Starck"
    onClick={[Function]}
    pictureSrc="http://pictureSrc.com"
  >
    <div
      className="c0"
    >
      <Styled(Avatar)
        name="Tony Starck"
        src="http://pictureSrc.com"
      >
        <Avatar
          className="c1"
          colors="hsl(145, 63%, 49%)"
          name="Tony Starck"
          size={3.1}
          src="http://pictureSrc.com"
        >
          <div
            aria-label="Tony Starck"
            className="c1"
          >
            <Image
              alt="Tony Starck"
              height={31}
              src="http://pictureSrc.com"
              width={31}
            >
              <img
                alt="Tony Starck"
                className="c2"
                height={31}
                src="http://pictureSrc.com"
                width={31}
              />
            </Image>
          </div>
        </Avatar>
      </Styled(Avatar)>
      <styled.span>
        <span
          className="c3"
        >
          Tony Starck
        </span>
      </styled.span>
      <styled.div
        data-test="DisconnectWrapper-test"
        onClick={[Function]}
      >
        <div
          className="c4"
          data-test="DisconnectWrapper-test"
          onClick={[Function]}
        >
          <Styled(Icon)
            color="white"
            name="power-off"
          >
            <Icon
              className=""
              color="white"
              height="20"
              name="power-off"
              spin={false}
              width="20"
            >
              <styled.div
                height="20"
                spin={false}
                width="20"
              >
                <div
                  className="c5"
                  height="20"
                  width="20"
                >
                  <svg
                    height="20"
                    style={
                      Object {
                        "display": "block",
                      }
                    }
                    viewBox="0 0 512 512"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M376.7 156.736c-8.33-8.333-8.328-21.84.004-30.17 8.333-8.33 21.84-8.328 30.17.005 83.292 83.319 83.277 218.381-.033 301.682-83.31 83.301-218.372 83.301-301.682 0-83.31-83.3-83.325-218.363-.033-301.682 8.33-8.333 21.837-8.335 30.17-.005 8.332 8.33 8.335 21.837.005 30.17-66.634 66.655-66.622 174.705.026 241.346 66.648 66.64 174.698 66.64 241.346 0s66.66-174.691.026-241.346zM234.772 42.666c0-11.781 9.552-21.333 21.334-21.333s21.333 9.552 21.333 21.334V256c0 11.782-9.551 21.333-21.333 21.333-11.782 0-21.334-9.55-21.334-21.333V42.667z"
                      fill="hsl(0, 100%, 100%)"
                      fillRule="evenodd"
                    />
                  </svg>
                </div>
              </styled.div>
            </Icon>
          </Styled(Icon)>
        </div>
      </styled.div>
    </div>
  </UserInfo>
</Styled(UserInfo)>
`;

exports[`<UserInfo /> should render withouth a problem 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 3.1rem;
  height: 3.1rem;
  border-radius: 50%;
  background: hsl(145,63%,49%);
  color: white;
}

.c4 {
  display: inline-block;
  border-image-source: none;
  border-image-width: 0;
  padding: 0;
  font-size: 20;
  line-height: 20;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-family: "Open Sans",Helvetica,Arial,sans-serif;
  font-weight: 200;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  text-align: left;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  display: grid;
  grid-template-columns: 4.1rem auto auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.5rem;
  background: rgba(0,0,0,0.2);
  border-top: 1px solid hsl(213,17%,20%);
  border-bottom: 1px solid hsl(213,17%,20%);
  color: hsl(0,100%,100%);
  font-size: 1.4rem;
  cursor: pointer;
}

@media (min-width:36em) and (max-width:61.9375em) {
  .c2 {
    display: none;
  }
}

@media (min-width:0em) and (max-width:35.9375em) {
  .c0 {
    display: none;
  }
}

@media (min-width:36em) and (max-width:61.9375em) {
  .c0 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    grid-template-columns: auto;
    grid-template-rows: 4.1rem 5rem;
  }
}

<Styled(UserInfo)
  name="Tony Starck"
>
  <UserInfo
    className="c0"
    name="Tony Starck"
    onClick={[Function]}
    pictureSrc={null}
  >
    <div
      className="c0"
    >
      <Styled(Avatar)
        name="Tony Starck"
        src={null}
      >
        <Avatar
          className="c1"
          colors="hsl(145, 63%, 49%)"
          name="Tony Starck"
          size={3.1}
          src={null}
        >
          <div
            aria-label="Tony Starck"
            className="c1"
          >
            <span>
              TS
            </span>
          </div>
        </Avatar>
      </Styled(Avatar)>
      <styled.span>
        <span
          className="c2"
        >
          Tony Starck
        </span>
      </styled.span>
      <styled.div
        data-test="DisconnectWrapper-test"
        onClick={[Function]}
      >
        <div
          className="c3"
          data-test="DisconnectWrapper-test"
          onClick={[Function]}
        >
          <Styled(Icon)
            color="white"
            name="power-off"
          >
            <Icon
              className=""
              color="white"
              height="20"
              name="power-off"
              spin={false}
              width="20"
            >
              <styled.div
                height="20"
                spin={false}
                width="20"
              >
                <div
                  className="c4"
                  height="20"
                  width="20"
                >
                  <svg
                    height="20"
                    style={
                      Object {
                        "display": "block",
                      }
                    }
                    viewBox="0 0 512 512"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M376.7 156.736c-8.33-8.333-8.328-21.84.004-30.17 8.333-8.33 21.84-8.328 30.17.005 83.292 83.319 83.277 218.381-.033 301.682-83.31 83.301-218.372 83.301-301.682 0-83.31-83.3-83.325-218.363-.033-301.682 8.33-8.333 21.837-8.335 30.17-.005 8.332 8.33 8.335 21.837.005 30.17-66.634 66.655-66.622 174.705.026 241.346 66.648 66.64 174.698 66.64 241.346 0s66.66-174.691.026-241.346zM234.772 42.666c0-11.781 9.552-21.333 21.334-21.333s21.333 9.552 21.333 21.334V256c0 11.782-9.551 21.333-21.333 21.333-11.782 0-21.334-9.55-21.334-21.333V42.667z"
                      fill="hsl(0, 100%, 100%)"
                      fillRule="evenodd"
                    />
                  </svg>
                </div>
              </styled.div>
            </Icon>
          </Styled(Icon)>
        </div>
      </styled.div>
    </div>
  </UserInfo>
</Styled(UserInfo)>
`;
